--- a/Project2/src/Project2/Properties/launchSettings.json
+++ b/Project2/src/Project2/Properties/launchSettings.json
@@ -10,7 +10,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchUrl": "index.html",
+      "launchBrowser": true,
       "environmentVariables": {
         "Hosting:Environment": "Development"
       }
