--- a/Project2/src/Project2/bower.json
+++ b/Project2/src/Project2/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "3.3.6",
     "bootswatch": "3.3.6",
-    "Font-Awesome": "4.5.0"
+    "Font-Awesome": "4.5.0",
+      "angular": "1.4.9"
   }
 }
