up to date with Entity Framework Intro

--- a/Project4/src/Project4/appsettings.json
+++ b/Project4/src/Project4/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "ProjectAppConnectionString": "Server=(localdb)\\ProjectsV12;Database=ProjectApp;Trusted_Connection=true"
   }
 }
