--- a/Project4/src/Project4/bower.json
+++ b/Project4/src/Project4/bower.json
@@ -2,6 +2,7 @@
   "name": "ASP.NET",
   "private": true,
   "dependencies": {
+    "moment": "2.12.0",
     "bootstrap": "3.3.5",
     "angular": "1.4.6",
     "font-awesome": "4.4.0",
