refactor and angular guts added

--- a/Project4/src/Project4/appsettings.json
+++ b/Project4/src/Project4/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "Data": {
-    "ProjectAppConnectionString": "Server=(localdb)\\ProjectsV12;Database=ProjectApp;Trusted_Connection=true"
+    "TodoAppConnectionString": "Server=(localdb)\\ProjectsV12;Database=TodoApp;Trusted_Connection=true"
   }
 }
