--- a/Project4/src/Project4/project.json
+++ b/Project4/src/Project4/project.json
@@ -35,6 +35,9 @@
     "wwwroot",
     "node_modules"
   ],
+  "scripts": {
+    "postrestore": [ "bower install" ]
+  },
   "publishExclude": [
     "**.user",
     "**.vspscc"
