--- a/Project4/src/Project4/bower.json
+++ b/Project4/src/Project4/bower.json
@@ -2,14 +2,14 @@
   "name": "ASP.NET",
   "private": true,
   "dependencies": {
-    "moment": "2.12.0",
-    "bootstrap": "3.3.5",
     "angular": "1.4.6",
-    "font-awesome": "4.4.0",
-    "bootswatch": "3.3.5",
     "angular-bootstrap": "latest",
-    "toastr": "2.1.2",
+    "angular-bootstrap-show-errors": "~2.3.0",
     "angular-ui-router": "0.2.18",
-    "angular-bootstrap-show-errors": "~2.3.0"
+    "bootstrap": "3.3.5",
+    "bootswatch": "3.3.5",
+    "font-awesome": "4.4.0",
+    "moment": "2.12.0",
+    "toastr": "2.1.2"
   }
 }
