--- a/Project4/src/Project4/bower.json
+++ b/Project4/src/Project4/bower.json
@@ -7,6 +7,7 @@
     "angular-ui-router": "0.2.18",
     "angular-bootstrap-show-errors": "2.3.0",
     "bootstrap": "latest",
+    "bootstrap-table": "1.10.1",
     "bootswatch": "3.3.5",
     "font-awesome": "4.4.0",
     "moment": "2.12.0",
